--- a/index.html
+++ b/index.html
@@ -1,11 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/sryle.css">
 </head>
+
 <body>
+    <header class="header">
+        <div class="header__item">
+            <img class="logo-white" src="img/company-logo-white.svg" alt="company-logo-white">
+
+            <h1 class="header__h1">partner with konstuct</h1>
+            <p class="header__p">An award-winning construction management firm</p>
+        </div>
+    </header>
+
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar__inner">
+                <img class="navbar__logo-black" src="img/company-logo-black.svg" alt="">
+                    <ul class="navbar__menu">
+                        <li class="navbar_li"><a class="navbar_a" href="#">Home</a></li>
+                        <li class="navbar_li"><a class="navbar_a" href="#">About</a></li>
+                        <li class="navbar_li"><a class="navbar_a" href="#">Servises</a></li>
+                        <li class="navbar_li"><a class="navbar_a" href="#">Work</a></li>
+                        <li class="navbar_li"><a class="navbar_a" href="#">Contact</a></li>
+                    </ul>
+                
+            </div>
+        </div>
+    </nav>
+
+    <section class="story">
+        <div class="container">
+            <h2 class="story_title2">our story</h2>
+            <div class="story_inner">
+            <div class="story_left">
+                <h3 class="story_title3">Founded in 2011 by John Mathew <br>Smith, <span
+                        class="accent-color">Konstruct</span> has become the <br> number one construction management
+                    <br> firm</h3>
+                <p class="story_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed <br> diam nonummy
+                    nibh euismod tincidunt ut laoreet dolore magna <br> aliquam erat. Lorem ipsum dolor sit amet,
+                    consectetuer <br> adipiscing elit, sed diam nonummy nibh euismod tincidunt ut <br>laoreet dolore
+                    magna aliquam erat.</p>
+            </div>
+            <div class="story_right">
+                <div class="story_item">WE PLAN</div>
+                <div class="story_item">WE MANAGE</div>
+                <div class="story_item">WE BUILD</div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <section class="servises">
+        <div class="container">
+            <div class="servises_inner">
+            <h2 class="servises_title2">OUR CAPABILITIES</h2>
+            <div class="servises_right">
+            <p class="servises_p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            <button class="servises_btn"> <a class="servises_btn-a" href="">ALL SERVICES</a></button>
+        </div>
+    </div>
+    <div class="servises_items">
+        <div class="servises_grid">
+            <div class="servises-item">
+                <img class="icon_servises"src="img/servises-icon-1.png" alt="icon_servises">
+                <div class="servises-item_title2">PROJECT AND CONSTRUCTION MANAGEMENT</div>
+                <p class="servises-item_p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+            <div class="servises-item">
+                <img class="icon_servises" src="img/servises-icon-2.png" alt="icon_servises">
+                <div class="servises-item_title2">STRUCTURE AUDIT AND MAINTENANCE</div>
+                <p class="servises-item_p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+            <div class="servises-item">
+                <img class="icon_servises" src="img/servises-icon-3.png" alt="icon_servises">
+                <div class="servises-item_title2">FACTORY CONSTRUCTION AND MODELING</div>
+                <p class="servises-item_p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+        </div>
+    </div>
+        </div>
+    </section>
     
+
+    <section class="tuch">
+        <div class="tutch-tex">
+        <h2 class="tuch-h2">Want to build <br>something amazing?</h2>
+        <button class="tuch-btn"><a class="tuch_btn-a" href="#">GET IN TOUCH</a></button>
+    </div>
+    </section>
+
+    <section class="Newsletter">
+        <div class="new-flex">
+        <div class="news-bg">
+            <form class="form-flex" action="send.php" method="post">
+            <div class="news-text">Newsletter Signup</div>
+            <div class="new-right">
+            <input class="form-email" type="text" name="email" placeholder="test@youremail.com">
+            <input class="form-btn " type="submit" value="SIGNUP">
+        </div>
+        </form>
+        </div>
+    </div>
+    </section>
+
+    <section class="footer">
+        <div class="footer-bg">
+        <div class="container">
+            <div class="footer__flex">
+            <div class="footer__company">
+                <h6 class="footer__company-h6">COMPANY</h6>
+                <img class="footer_logo" src="img/company-logo-white.svg" alt="white_logo">
+                <p class="footer__company-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+            <div class="footer__links">
+                <h6 class="footer__links-h6">links</h6>
+                <div class="footer__inner">
+                <p class="footer__links-p">HOME <br> ABOUT <br> SERVICES <br>PROJECTS <br>CONTACT US</p>
+                <p class="footer__links-p2">FAQ <br> TERMS <br> CAREERS</p>
+                <p class="footer__links-p3">BLOG <br> PARTNER <br> SNEWS</p>  
+            </div>
+            </div>
+            <div class="footer__contacts">
+                <h6 class="footer__contacts-h6">CONTACT US</h6>
+                <div class="footer__contacts_inner">
+                <p class="footer__contacts-adress">213 Baker StreetOriel City Kounty7000 KNW,Kountry Name </p><br>
+                <p class="footer__contacts-number">+23 994 233 4022</p><br>
+                <p class="footer__contacts-email">info@konstruct.com</p>
+            </div>
+        </div>
+        </div>
+    </div>
+    </section>
 </body>
+
 </html>
